@@ -81,8 +81,21 @@ int ap_execve(const char *, const char *argv[], const char *envp[]);
 #endif
 #endif /* WIN32 */
 
-/* ap_vformatter() is a generic printf-style formatting routine
- * with some extensions.
+/* apapi_vformatter() is a generic printf-style formatting routine
+ * with some extensions.  The extensions are:
+ *
+ * %pA	takes a struct in_addr *, and prints it as a.b.c.d
+ * %pI	takes a struct sockaddr_in * and prints it as a.b.c.d:port
+ * %pp  takes a void * and outputs it in hex
+ *
+ * The %p hacks are to force gcc's printf warning code to skip
+ * over a pointer argument without complaining.  This does
+ * mean that the ANSI-style %p (output a void * in hex format) won't
+ * work as expected at all, but that seems to be a fair trade-off
+ * for the increased robustness of having printf-warnings work.
+ *
+ * Additionally, apapi_vformatter allows for arbitrary output methods
+ * using the apapi_vformatter_buff and flush_func.
  *
  * The ap_vformatter_buff has two elements curpos and endpos.
  * curpos is where ap_vformatter will write the next byte of output.
