@@ -1,5 +1,9 @@
 Changes with Apache 1.3b7
 
+  *) Add %pA, %pI, and %pp codes to ap_vformatter (and hence ap_bprintf,
+     ap_snprintf, and ap_psprintf).  See include/ap.h for docs.
+     [Dean Gaudet]
+
   *) Because /usr/local/apache is the default prefix the ``configure
      --compat'' option no longer has to set prefix, again. This way the
      --compat option honors a leading --prefix option. [Lars Eilebrecht]
